<?xml version="1.0"?>
<package format="2">
  <name>objects_to_boxes</name>
  <version>0.0.0</version>
  <description>The objects_to_boxes package</description>

  <maintainer email="dpazruiz@ucsd.edu">David Paz</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>jsk_recognition_msgs</build_depend>

  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->
  <!-- <build_export_depend>sensor_msgs</build_export_depend> -->
  <!-- <build_export_depend>jsk_recognition_msgs</build_export_depend> -->
  <!-- <build_export_depend>jsk_rviz_plugins</build_export_depend> -->
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
